# rustweb

./: .env  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml
resources/clickhouse/: config.xml  init.sql
src/: main.rs
