[package]
name = "rustweb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
lapin = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
clickhouse = "0.13.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"